test/fail_compilation/fail8887.d
module fail8887;

extern(C) void fail(int[4] x);
extern(C) int[4] fail2();
extern(C++) void fail3(int[4] x);
extern(C++) int[4] fail4();

void main() { }
